RESOLVED FIXED258554
Missing ENABLE(WEBASSEMBLY_B3JIT) guard in Wasm interpreter implementation
https://bugs.webkit.org/show_bug.cgi?id=258554
Summary Missing ENABLE(WEBASSEMBLY_B3JIT) guard in Wasm interpreter implementation
Hayashida Ryuichi
Reported 2023-06-27 03:01:47 PDT
WEBASSEMBLY is ON and ENABLE_FTL_JIT is OFF cause build errors since Wasm interpreter implementation misses ENABLE(WEBASSEMBLY_B3JIT) guard in some member functions. At least the following member functions need to be fixed considering the case where WEBASSEMBLY_B3JIT is OFF. For example, - StackVisitor::readInlinableWasmFrame - OptimizingJITCallee::addCodeOrigin More APIs would need similar fix.
Attachments
Ross Kirsling
Comment 1 2023-07-02 21:10:37 PDT
Radar WebKit Bug Importer
Comment 2 2023-07-04 03:02:15 PDT
EWS
Comment 3 2023-07-05 19:09:04 PDT
Committed 265786@main (441ba4d830a0): <https://commits.webkit.org/265786@main> Reviewed commits have been landed. Closing PR #15490 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.