Ensure validity of ENABLE(WEBASSEMBLY) without ENABLE(WEBASSEMBLY_B3JIT) https://bugs.webkit.org/show_bug.cgi?id=258554

Reviewed by Justin Michaud.

As a step toward having JITless WASM, we must ensure that the WASM build isn't secretly depending on B3.
This patch corrects a few neglected locations.

* Source/JavaScriptCore/interpreter/StackVisitor.cpp:
(JSC::StackVisitor::readInlinableWasmFrame):
* Source/JavaScriptCore/wasm/WasmCallee.cpp:
* Source/JavaScriptCore/wasm/WasmFunctionParser.h:
(JSC::Wasm::FunctionParser<Context>::parseBody):
(JSC::Wasm::FunctionParser<Context>::parseExpression):
(JSC::Wasm::FunctionParser<Context>::parseUnreachableExpression):
* Source/JavaScriptCore/wasm/js/WebAssemblyExceptionConstructor.cpp:

Canonical link: https://commits.webkit.org/265786@main